fix centering but now the link is not centered

--- a/styles.css
+++ b/styles.css
@@ -4,21 +4,21 @@
 body{
 background-color:#242424;
 font-family: "Figtree", Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  margin: 0;
+
 }
+
 
 p, h1,a{
 
 color:white;
 
 }
-      .center {
-        position: fixed;
-        inset: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-      }
 
 #header{
 margin-bottom:0.5rem;
@@ -27,17 +27,19 @@ margin-bottom:0.5rem;
 }
 
 a {
-
+    margin:auto;
+text-align:center;
     text-decoration:none;
 }
 
 .cards{
 
 border: #ffffff solid 1px;
-height:100px;
+height:50px;
 max-width: 100px;
-max-height:50px;
+max-height:200px;
 margin: 0.5rem;
+width: 110px;
 
 }
 
